# Co-Engine

./: .env.example  .gitignore  Cargo.toml  build.rs
assets/: default_layout.json
src/: ai.rs  camera.rs  controls.rs  editor.rs  git.rs  grid.wgsl  main.rs  mesh.rs  project.rs  terminal.rs  theme.rs
