[package]
name = "coengine"
version = "0.0.9"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
glam = "0.33.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
pollster = "0.3"
serde_json = "1.0.150"
ureq = "2"
wgpu = "22"
winit = "0.30"

[build-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "ico"] }
winresource = "0.1"
