[package]
name = "coengine"
version = "0.0.19"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
egui_dock = { version = "0.14", features = ["serde"] }
egui_extras = { version = "0.29", default-features = false }
glam = { version = "0.33.1", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
pollster = "0.3"
portable-pty = "0.8"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
ureq = "2"
vt100 = "0.15"
wgpu = "22"
winit = { version = "0.30", features = ["serde"] }

[build-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "ico"] }
winresource = "0.1"
